<resources>
    <string name="app_name">SmartWardrobe</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Настройки</string>
    <string name="deg">°</string>
    <string name="action_refresh" translatable="true">Refresh</string>
    <string name="action_exit" translatable="true">Exit</string>
    <string name="action_preferred_location" translatable="true">Preferred location</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Auto Search-->
    <string name="strict">Строго</string>
    <string name="style_asf">Стиль: </string>
    <string name="show_params">Показать параметры поиска</string>
    <string name="new_asf">Новое</string>
    <string name="clean_asf">Чистое</string>
    <string name="for_weather_asf">По погоде</string>

    <!-- Catalog -->
    <string name="delete">Удалить</string>

    <!-- Find by tags -->
    <string name="no_results">Не найдено</string>

    <!-- -->
    <string name="pref_location_key">location</string>
    <string name="pref_metric_key">metric</string>
    <string name="pref_days_key">numbOfDays</string>
    <string name="pref_days_default">7</string>
    <string name="pref_location_default">Minsk</string>
    <string name="main_menu_auto_find">Подобрать одежду</string>
    <string name="main_menu_catalog">Просмотреть всё</string>
    <string name="main_menu_find_by_teg">Поиск по тегам</string>
    <string name="main_menu_find_to_wash">Корзина для стирки</string>
    <string name="main_menu_pack_to_trip">Собраться в поездку</string>
    <string name="namelabel">"Название: "</string>
    <string name="materiallabel">"Материал: "</string>
    <string name="color_asf">"Цвет: "</string>
    <string name="washinglabel">"Дата последней стирки: "</string>
    <string name="wash">В стирку</string>
    <string name="returnTo">Вернуть в шкаф</string>
    <string name="add_item">Добавить вещь</string>
    <string name="delete_item">Удалить вещь</string>
    <string name="put_on">Надеть</string>
    <string name="share">Поделиться с друзьями</string>
    <string name="to_favorite">В избранное</string>
    <string name="edit_item">Редактировать</string>
    <string name="find_by_teg_label">Введите ключевые слова через пробел</string>
    <string name="photo_add">Добавить фото</string>
    <string name="image_view_adding">Picture of the apparel.</string>
    <string name="textView_name_add">Name:</string>
    <string name="textView">Т ношения:</string>
    <string name="textView_descr_add">Описание:</string>
    <string name="color">Цвет:</string>
    <string name="tags">Метки (тэги для поиска):</string>
    <string name="textView_minTemp_add">от</string>
    <string name="textView_maxTemp_add">до</string>
    <string name="button_addToWardrobe">Добавить в шкаф!</string>
    <string name="button_back">Назад</string>
    <string name="title_catalog_activity">Каталог</string>

    <!-- Travel fragment-->
    <string name="day_number">Продолжительность поезки (дней)</string>
    <string name="bag_size">Размер багажа</string>
    <string-array name="bag_type">
        <item>Рюкзак</item>
        <item>Сумка(м)</item>
        <item>Сумка(б)</item>
        <item>Чемодан</item>
        <item>Машина</item>
    </string-array>

    <!-- FancyFlow-->
    <string name="button_put_on">Надеть</string>
</resources>
