<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageViewAdd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="10dp"
                android:visibility="gone" />

            <Button
                android:id="@+id/btnPhotoAdd"
                android:layout_width="123dp"
                android:layout_height="63dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/photo_add" />

            <Spinner
                android:id="@+id/category_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            android:padding="10dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textViewWarmthAdd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textView"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textViewMinTAdd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:padding="4dp"
                android:text="@string/textView_minTemp_add"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/min_temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberSigned"
                android:minWidth="60dp"
                android:padding="10dp" />

            <TextView
                android:id="@+id/textViewMaxTAdd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:padding="10dp"
                android:text="@string/textView_maxTemp_add"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/max_temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberSigned"
                android:minWidth="60dp"
                android:padding="10dp" />
        </LinearLayout>

        <TextView
            android:id="@+id/textViewDescrAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/textView_descr_add"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:minWidth="240dp"
            android:padding="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/color"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:minWidth="240dp"
            android:padding="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/tags"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/etTags"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:minWidth="240dp"
            android:padding="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            android:showDividers="beginning|end">

            <TextView
                android:id="@+id/textViewChBAdding"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Стили:"
                android:textSize="24sp" />

            <LinearLayout
                android:id="@+id/style_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"></LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/buttonToWardrobeAdd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/button_addToWardrobe"
            android:textColor="#ffb7adc0"
            android:textSize="24sp" />

    </LinearLayout>
</ScrollView>